[gd_scene load_steps=6 format=3 uid="uid://bexmsq2b4r1v7"]

[ext_resource type="Script" uid="uid://b2t5j7xhfce6b" path="res://scenes/button/button.gd" id="1_lrmay"]
[ext_resource type="PackedScene" uid="uid://b3yv86pke012g" path="res://Components/InputComponent/input_component.tscn" id="2_s3p44"]

[sub_resource type="BoxShape3D" id="BoxShape3D_cayyn"]
size = Vector3(1, 0.498535, 0.493475)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s3p44"]
albedo_color = Color(0.540848, 0.300806, 0.211299, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_lrmay"]
size = Vector3(2.17558, 1, 2.03891)

[node name="Button" type="StaticBody3D"]
script = ExtResource("1_lrmay")
pressed_color = Color(0.45379, 0.247468, 0.169579, 1)
not_pressed_color = Color(0.541176, 0.301961, 0.211765, 1)

[node name="ButtonCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00366211, -0.253262)
visible = false
shape = SubResource("BoxShape3D_cayyn")
debug_color = Color(0.855809, 0.412522, 0.42745, 1)

[node name="ButtonSprite" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0191956, -0.0206299, -0.261036)
size = Vector3(0.927307, 0.536377, 0.486938)
material = SubResource("StandardMaterial3D_s3p44")

[node name="ButtonText" type="Label3D" parent="ButtonSprite"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0191956, 0.0206299, 0.261036)
text = "Press E"

[node name="PlayerDetector" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.142192, 0, 0.499862)
shape = SubResource("BoxShape3D_lrmay")

[node name="InputComponent" parent="." instance=ExtResource("2_s3p44")]

[node name="ButtonTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="timeout" from="ButtonTimer" to="." method="_on_button_timer_timeout"]
